# ViddyBud

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  windows-artifact.yml
docs/: package-maintenance.md  release-pipeline.md
packaging/homebrew/: viddybud.rb.tpl
packaging/scoop/: viddybud.json.tpl
packaging/winget/: metadata.yml
scripts/release/: build_artifacts.sh  generate_checksums.sh  generate_homebrew_formula.py  generate_scoop_manifest.py  mirror_to_repo.sh  resolve_version.sh  verify_assets.sh
src/: autotune.rs  decoder.rs  encoder.rs  frame.rs  main.rs  manifest.rs  progress.rs  record.rs  util.rs
tests/: cli_progress.rs  decode_parallel.rs
