[package]
name = "viddybud"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Byte-perfect folder<->video codec (bytes->RGB frames->lossless MKV)"
repository = "https://github.com/KripKrop72724/ViddyBud"
homepage = "https://github.com/KripKrop72724/ViddyBud"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
blake3 = "1"
crossbeam-channel = "0.5"
rayon = "1"
num_cpus = "1"
indicatif = "0.17"
sysinfo = "0.30"
rand = "0.8"
filetime = "0.2"
memmap2 = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
